src/snapshots/skate__tests__functions-19.snap
---
source: src/main.rs
expression: f

---
name: main
args: []
ret: ~
body:
  - Let:
      - z
      - FieldAccess:
          - Var: a
          - b

