src/snapshots/skate__tests__functions-2.snap
---
source: src/main.rs
expression: f

---
name: bar
args:
  - name: x
    ty: Int
ret: ~
body: []

