src/snapshots/skate__tests__functions-20.snap
---
source: src/main.rs
expression: f

---
name: main
args: []
ret: ~
body:
  - Let:
      - z
      - FieldAccess:
          - FieldAccess:
              - Var: a
              - b
          - c

