src/snapshots/skate__tests__functions-3.snap
---
source: src/main.rs
expression: f

---
name: foo
args:
  - name: y
    ty: Int
ret: ~
body: []

