src/snapshots/skate__tests__functions-4.snap
---
source: src/main.rs
expression: f

---
name: baz
args:
  - - y
    - Int
  - - z
    - String
body: ~

