src/snapshots/skate__tests__functions-6.snap
---
source: src/main.rs
expression: f

---
name: baz
args:
  - name: y
    ty: Int
  - name: z
    ty: String
ret: Int
body: []

