src/snapshots/skate__tests__functions-7.snap
---
source: src/main.rs
expression: f

---
name: baz
args:
  - name: y
    ty: Int
ret: Bool
body: ~

