src/snapshots/skate__tests__functions-9.snap
---
source: src/main.rs
expression: f

---
name: a
args: []
ret: ~
body:
  - Expr:
      Var: a
  - Expr:
      Var: b
  - Expr:
      Var: c

