src/snapshots/skate__tests__progs.snap
---
source: src/main.rs
expression: f

---
- Function:
    name: hello
    args: []
    ret: ~
    body:
      - Print:
          Literal:
            String: hello
- Function:
    name: world
    args: []
    ret: ~
    body:
      - Print:
          Literal:
            String: world
- Function:
    name: main
    args: []
    ret: ~
    body:
      - Expr:
          Call:
            - Var: hello
            - []
      - Expr:
          Call:
            - Var: world
            - []

